fix taille section mobile

--- a/portfolio.css
+++ b/portfolio.css
@@ -345,7 +345,7 @@ section:nth-child(even) {
 @media screen and (max-width: 768px) {
   section {
     width: 99vw;
-    height: 100dvh;
+    height: 100vh;
   }
 
   .hero-section {
